SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/Ocean_Workspaces_Request__c.object
<CustomObject>
    <fields>
        <fullName>ADO_Notes__c</fullName>
        <label>ADO Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AWS_Account_Name__c</fullName>
        <label>AWS Account Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWS_Region__c</fullName>
        <label>AWS Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_AWS_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Storage_per_User_GB__c</fullName>
        <label>Additional Storage per User (GB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Component__c</fullName>
        <label>Application Component</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Options__c</fullName>
        <label>Billing Options</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Workspace_Billing_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calculated_Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Environment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Cost__c</fullName>
        <label>Estimated Monthly Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>License</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Workspaces_License</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Months_Requested__c</fullName>
        <label>Number of Months Requested</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Workspaces__c</fullName>
        <label>Number of Workspaces</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ocean_Request_Id__c</fullName>
        <label>Ocean Request Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Status__c</fullName>
        <label>Resource Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Resource_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Root_Volume_User_Volume__c</fullName>
        <label>Root Volume;User Volume</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Root:80 GB,User:50 GB</fullName>
                </value>
                <value>
                    <fullName>Root:80 GB,User:100 GB</fullName>
                </value>
                <value>
                    <fullName>Root:80 GB,User:10 GB</fullName>
                </value>
                <value>
                    <fullName>Root:175 GB,User:100 GB</fullName>
                </value>
                <value>
                    <fullName>above 175 GB</fullName>
                </value>
                <value>
                    <fullName>above 100 GB</fullName>
                </value>
                <value>
                    <fullName>50 GB</fullName>
                </value>
                <value>
                    <fullName>100 GB</fullName>
                </value>
                <value>
                    <fullName>10 GB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Estimated_Cost__c</fullName>
        <label>Total Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Workspace_Bundle__c</fullName>
        <label>Workspace Bundle</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Graphics</fullName>
                </value>
                <value>
                    <fullName>Graphics Plus</fullName>
                </value>
                <value>
                    <fullName>GraphicsPro</fullName>
                </value>
                <value>
                    <fullName>GraphicsPro Plus</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Performance Plus</fullName>
                </value>
                <value>
                    <fullName>Performance Plus-0</fullName>
                </value>
                <value>
                    <fullName>Performance Plus-1</fullName>
                </value>
                <value>
                    <fullName>Performance Plus-3</fullName>
                </value>
                <value>
                    <fullName>Performance-0</fullName>
                </value>
                <value>
                    <fullName>Performance-1</fullName>
                </value>
                <value>
                    <fullName>Performance-3</fullName>
                </value>
                <value>
                    <fullName>Power</fullName>
                </value>
                <value>
                    <fullName>Power Plus</fullName>
                </value>
                <value>
                    <fullName>Power Plus-0</fullName>
                </value>
                <value>
                    <fullName>Power Plus-1</fullName>
                </value>
                <value>
                    <fullName>Power Plus-2</fullName>
                </value>
                <value>
                    <fullName>Power-0</fullName>
                </value>
                <value>
                    <fullName>Power-1</fullName>
                </value>
                <value>
                    <fullName>Power-2</fullName>
                </value>
                <value>
                    <fullName>PowerPro</fullName>
                </value>
                <value>
                    <fullName>PowerPro Plus</fullName>
                </value>
                <value>
                    <fullName>PowerPro Plus-0</fullName>
                </value>
                <value>
                    <fullName>PowerPro Plus-1</fullName>
                </value>
                <value>
                    <fullName>PowerPro Plus-2</fullName>
                </value>
                <value>
                    <fullName>PowerPro-0</fullName>
                </value>
                <value>
                    <fullName>PowerPro-1</fullName>
                </value>
                <value>
                    <fullName>PowerPro-2</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Standard Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Ocean Workspaces Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ocean_Request_Id__c</columns>
        <columns>Number_of_Workspaces__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <displayFormat>OCEAN-WKSPC-{000}</displayFormat>
        <label>Ocean Workspace Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ocean Workspaces Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>